[gd_scene load_steps=32 format=2]

[ext_resource path="res://Enemies/Bosses/Boss.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/Bosses/Hunter/Hunter.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Bosses/Spawn.tscn" type="PackedScene" id=3]
[ext_resource path="res://WhiteColor.shader" type="Shader" id=4]
[ext_resource path="res://Enemies/Bosses/Hunter/HunterStateMachine.gd" type="Script" id=5]
[ext_resource path="res://Enemies/Bosses/Idle.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/Bosses/Hunter/SimpleAttackMove.gd" type="Script" id=7]
[ext_resource path="res://Utils/State/Sequence.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/Bosses/Hunter/SimpleAttack.gd" type="Script" id=9]
[ext_resource path="res://Enemies/Bosses/Hunter/Hunter.gd" type="Script" id=10]
[ext_resource path="res://Enemies/Bosses/Hunter/HunterCollisionShape.tres" type="Shape2D" id=11]
[ext_resource path="res://Enemies/PathfindLine.tscn" type="PackedScene" id=12]
[ext_resource path="res://Enemies/Bosses/Hunter/AreaAttack.gd" type="Script" id=13]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/active = false

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.16654
height = 17.4534

[sub_resource type="CapsuleShape2D" id=3]
radius = 3.05564
height = 1.8572

[sub_resource type="Animation" id=18]
resource_name = "AreaAttack"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 44, 45 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("BossStateMachine/AreaAttackSequence/AreaAttack")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fire"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=6]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=7]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=8]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=9]
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=10]
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=11]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=12]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.1, 1.8, 2.2, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 25, 26, 27, 28 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("BossStateMachine/SimpleAttackSequence/SimpleAttack")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0 ],
"method": "fire"
}, {
"args": [ 1 ],
"method": "fire"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Fire0:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -5.5, -4.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Fire1:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4.5, -4.5 ) ]
}

[sub_resource type="Animation" id=13]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.1, 1.8, 2.2, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 29, 30, 30, 31, 32, 33 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("BossStateMachine/SimpleAttackSequence/SimpleAttack")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0 ],
"method": "fire"
}, {
"args": [ 1 ],
"method": "fire"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Fire1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -17, -15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Fire0:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -17, -18.5 ) ]
}

[sub_resource type="Animation" id=14]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.1, 1.8, 2.2, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 34, 35, 35, 36, 37, 38 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("BossStateMachine/SimpleAttackSequence/SimpleAttack")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0 ],
"method": "fire"
}, {
"args": [ 1 ],
"method": "fire"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Fire0:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 17, -18.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Fire1:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 17, -15 ) ]
}

[sub_resource type="Animation" id=15]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.1, 1.8, 2.2, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 39, 40, 40, 41, 42, 43 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("BossStateMachine/SimpleAttackSequence/SimpleAttack")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0 ],
"method": "fire"
}, {
"args": [ 1 ],
"method": "fire"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Fire1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -5.5, -28 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Fire0:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4.5, -28 ) ]
}

[sub_resource type="Animation" id=16]
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 44 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("BossStateMachine")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "die" ],
"method": "_on_animation_finished"
} ]
}

[sub_resource type="Animation" id=17]
length = 2.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 44, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:material:shader_param/active")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2.35, 2.4, 2.45, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Hunter" instance=ExtResource( 1 )]
collision_layer = 16
collision_mask = 0
script = ExtResource( 10 )

[node name="Sprite" parent="." index="1"]
material = SubResource( 1 )
texture = ExtResource( 2 )
offset = Vector2( 0, -12 )
hframes = 47
frame = 44

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2( -0.5, 0 )
rotation = -1.57079
shape = ExtResource( 11 )
disabled = true

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -0.5, -11.743 )
shape = SubResource( 2 )

[node name="Hitbox" parent="." index="4"]
damage = 0

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -0.4359, -10.4675 )
disabled = true

[node name="SoftCollision" parent="." index="5"]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( -0.5, 0 )
rotation = -1.57079
shape = SubResource( 3 )

[node name="Stats" parent="." index="6"]
max_health = 16

[node name="AnimationPlayer" parent="." index="7"]
autoplay = "IdleDown"
anims/AreaAttack = SubResource( 18 )
anims/IdleDown = SubResource( 4 )
anims/IdleLeft = SubResource( 5 )
anims/IdleRight = SubResource( 6 )
anims/IdleUp = SubResource( 7 )
anims/RunDown = SubResource( 8 )
anims/RunLeft = SubResource( 9 )
anims/RunRight = SubResource( 10 )
anims/RunUp = SubResource( 11 )
anims/SimpleAttackDown = SubResource( 12 )
anims/SimpleAttackLeft = SubResource( 13 )
anims/SimpleAttackRight = SubResource( 14 )
anims/SimpleAttackUp = SubResource( 15 )
anims/die = SubResource( 16 )
anims/spawn = SubResource( 17 )

[node name="BossStateMachine" parent="." index="8"]
script = ExtResource( 5 )

[node name="Spawn" parent="BossStateMachine" index="0" instance=ExtResource( 3 )]

[node name="SimpleAttackSequence" parent="BossStateMachine" index="1" instance=ExtResource( 8 )]

[node name="SimpleAttackMove" type="Node" parent="BossStateMachine/SimpleAttackSequence" index="0"]
script = ExtResource( 7 )

[node name="SimpleAttack" type="Node" parent="BossStateMachine/SimpleAttackSequence" index="1"]
script = ExtResource( 9 )

[node name="AreaAttackSequence" parent="BossStateMachine" index="2" instance=ExtResource( 8 )]

[node name="AreaAttackMove" type="Node" parent="BossStateMachine/AreaAttackSequence" index="0"]
script = ExtResource( 7 )

[node name="AreaAttack" type="Node" parent="BossStateMachine/AreaAttackSequence" index="1"]
script = ExtResource( 13 )

[node name="Idle" parent="BossStateMachine" index="3" instance=ExtResource( 6 )]

[node name="Line2D" parent="." index="10" instance=ExtResource( 12 )]

[node name="Fire0" type="Position2D" parent="." index="11"]
position = Vector2( 4.5, -28 )

[node name="Fire1" type="Position2D" parent="." index="12"]
position = Vector2( -5.5, -28 )

[node name="AreaAttack" type="Position2D" parent="." index="13"]
position = Vector2( -0.472473, -10.8668 )
[connection signal="animation_changed" from="AnimationPlayer" to="BossStateMachine" method="_on_animation_finished"]

[editable path="Hurtbox"]

[editable path="Hitbox"]

[editable path="SoftCollision"]

[editable path="BossStateMachine/Idle"]
